--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -147,7 +147,7 @@
                     }
                 }
             </style>
-            <a href="https://github.com/tthn0/Spotify-Readme" target="_blank">
+            <a href="https://github.com/SumanSharmaTech" target="_blank">
                 <main>
                     {% if scan_code %}
                         <img class="scan-code" src="data:image/png;base64, {{scan_code}}" alt="Scan Code" />
